Code style added.

--- a/minicurso-git/index.html
+++ b/minicurso-git/index.html
@@ -27,6 +27,15 @@
   <slide class="fill nobackground" style="background-image: url(images/slides/slide-9.png)"></slide>
   <slide class="fill nobackground" style="background-image: url(images/slides/slide-10.png)"></slide>
 
+  <slide class="fill nobackground">
+    <article>
+      <p>Configurando usuário</p>
+      <pre class="prettyprint">git config --global user.name "luizventurote"</pre>
+      <p>Configurando e-mail</p>
+      <pre class="prettyprint txm">git config --global user.email luizventurote@hotmail.com</pre>
+    </article>
+  </slide>
+
 </slides>
 
 <script>
