--- a/minicurso-git/index.html
+++ b/minicurso-git/index.html
@@ -36,6 +36,39 @@
     </article>
   </slide>
 
+  <slide class="fill nobackground">
+    <article>
+      <p>Criando um repositório local</p>
+      <pre class="prettyprint">cd meuprojeto
+git init</pre>
+    </article>
+  </slide>
+
+  <slide class="fill nobackground">
+    <article>
+      <pre class="prettyprint">git status</pre>
+    </article>
+  </slide>
+
+  <slide class="fill nobackground">
+    <article>
+      <pre class="prettyprint">git add arquivo.txt
+git commit -m "Mensagem"</pre>
+    </article>
+  </slide>
+
+  <slide class="fill nobackground">
+    <article>
+      <pre class="prettyprint">git log</pre>
+      
+      <p>Mostra o que foi modificado em cada commit</p>
+      <pre class="prettyprint">git log --stat</pre>
+
+      <p>Mostra gráfico do log</p>
+      <pre class="prettyprint">git log --graph</pre>
+    </article>
+  </slide>
+
 </slides>
 
 <script>
