Materiais extras adicionados.

--- a/http-server/index.html
+++ b/http-server/index.html
@@ -51,7 +51,7 @@
       <h2 class="title title-top">Apache Web Server</h2>
       <p class="left">As principais características:</p>
       <ul class="build">
-        <li>Fexível</li>
+        <li>Flexível</li>
         <li>Altamente configurável</li>
         <li>Robustez</li>
         <li>Escalabilidade</li>
