New slides added

--- a/desenvolvimento-de-lojas-virtuais-com-magento/index.html
+++ b/desenvolvimento-de-lojas-virtuais-com-magento/index.html
@@ -40,18 +40,27 @@
   <slide class="fill nobackground" style="background-image: url(images/slides/download.png)"></slide>
   <slide class="fill nobackground" style="background-image: url(images/slides/dashboard.png)"></slide>
   <slide class="fill nobackground" style="background-image: url(images/slides/default-store.png)"></slide>
+
+  <!-- Types of Products -->
   <slide class="fill nobackground" style="background-image: url(images/slides/types.png)"></slide>
+  <slide class="fill nobackground" style="background-image: url(images/slides/simple-product.png)"></slide>
+  <slide class="fill nobackground" style="background-image: url(images/slides/configurable-product.png)"></slide>
+  <slide class="fill nobackground" style="background-image: url(images/slides/downloadable.png)"></slide>
+  <slide class="fill nobackground" style="background-image: url(images/slides/grouped-product.png)"></slide>
+  <slide class="fill nobackground" style="background-image: url(images/slides/bundle-product-1.png)"></slide>
+  <slide class="fill nobackground" style="background-image: url(images/slides/bundle-product-2.png)"></slide>
 
   <!-- Modularity -->
   <slide class="fill nobackground" style="background-image: url(images/slides/modules.png)"></slide>
   <slide class="fill nobackground" style="background-image: url(images/slides/extensions.png)"></slide>
   <slide class="fill nobackground" style="background-image: url(images/slides/extensions2.png)"></slide>
 
-  <!-- Multiple stores and websites -->
-  <slide class="fill nobackground" style="background-image: url(images/slides/multi-store.png)"></slide>
-
   <!-- Translations -->
   <slide class="fill nobackground" style="background-image: url(images/slides/translations.png)"></slide>
+
+  <!-- Multiple stores and websites -->
+  <slide class="fill nobackground" style="background-image: url(images/slides/multi-store.png)"></slide>
+  <slide class="fill nobackground" style="background-image: url(images/slides/multi-store-example.png)"></slide>
 
   <!-- Currency -->
   <slide class="fill nobackground" style="background-image: url(images/slides/currencies.png)"></slide>
