Adds new slide about Magento themes

--- a/desenvolvimento-de-lojas-virtuais-com-magento/index.html
+++ b/desenvolvimento-de-lojas-virtuais-com-magento/index.html
@@ -55,6 +55,9 @@
   <slide class="fill nobackground" style="background-image: url(images/slides/extensions.png)"></slide>
   <slide class="fill nobackground" style="background-image: url(images/slides/extensions2.png)"></slide>
 
+  <!-- Themes -->
+  <slide class="fill nobackground" style="background-image: url(images/slides/themes.png)"></slide>
+
   <!-- Translations -->
   <slide class="fill nobackground" style="background-image: url(images/slides/translations.png)"></slide>
 
